# openbeam

./: .env.template  .gitattributes  .gitignore  COMPROMISE.md  CONTRIBUTING.md  Caddyfile  LIFT-SCHEMATICS.md  README.md  flake.nix  package.json  pnpm-lock.yaml  railway.json  railway.toml
.claude/commands/: qa.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-prompt.yml  config.yml  prompt.yml
.github/workflows/: ci.yml
apps/server/: .env.template  Cargo.toml  Dockerfile  nixpacks.toml  railway.toml
apps/server/crates/api/: Cargo.toml
apps/server/crates/api/src/: coerce.rs  command.rs  dispatch.rs  lib.rs  osc.rs  sink.rs  status.rs
apps/server/crates/bible/: Cargo.toml
apps/server/crates/bible/src/: lib.rs
apps/server/crates/detection/: Cargo.toml
apps/server/crates/detection/src/: lib.rs  merger.rs  pipeline.rs  quotation.rs  reading_mode.rs
apps/server/crates/detection/src/direct/: detector.rs
apps/server/crates/detection/src/semantic/: api_embedder.rs  detector.rs  embedder.rs  hnsw_index.rs  mod.rs
apps/server/crates/stt/: Cargo.toml
apps/server/crates/stt/src/: deepgram.rs  error.rs  lib.rs  types.rs
apps/server/data/: schema.sql  seed-db.sh
apps/server/scripts/: compute-embeddings.ts  init-data.sh
apps/server/src/: config.rs  main.rs  state.rs
apps/server/src/routes/: bible.rs  detection.rs  detection_shared.rs  detection_ws.rs  mod.rs  overlay.rs  remote.rs  stt.rs
apps/web/: eslint.config.js  index.html  overlay.html  package.json  playwright.config.ts  railway.toml  vite.config.ts
apps/web/e2e/: qa-story.sh
apps/web/e2e/fixtures/: .gitkeep  deepgram-responses.json  detection-results.json
apps/web/e2e/helpers/: mock-ws.ts  test-utils.ts
apps/web/e2e/tests/: detection.spec.ts  onboarding.spec.ts  overlay.spec.ts  smoke.spec.ts  transcript.spec.ts
apps/web/public/: audio-processor.js
apps/web/src/: App.tsx  index.css  main.tsx  overlay.tsx
apps/web/src/components/: settings-dialog.tsx
apps/web/src/hooks/: use-audio.ts  use-bible.ts  use-detection-ws.ts  use-detection.ts  use-remote-control.ts  use-tauri-event.ts  use-transcription.ts
apps/web/src/lib/: builtin-themes.ts  color-utils.ts  context-search.ts  fuse-search-client.ts  quick-search.ts  settings-dialog.ts  verse-renderer.ts
apps/web/src/services/: api.ts  index.ts  ws.ts
apps/web/src/stores/: bible-store.ts  broadcast-store.ts  detection-store.ts  settings-store.ts  tutorial-store.ts
apps/web/src/streams/: connection-manager.ts  setup.ts
(+27 files in other folders)
