[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "openbeam-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rhema-bible = { path = "crates/bible" }
rhema-detection = { path = "crates/detection", features = ["vector-search", "api-embedder"] }
openbeam-stt = { path = "crates/stt" }
