[package]
name = "rhema-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
aho-corasick = "1"
lru = "0.12"
rhema-bible = { path = "../bible" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[features]
default = []
vector-search = []
api-embedder = ["reqwest", "tokio"]
